--- a/miscresources.qrc
+++ b/miscresources.qrc
@@ -1,10 +1,10 @@
 <RCC>
-    <qresource prefix="/images">
-        <file>smpc.svg</file>
-        <file>smpc-big.png</file>
-        <file>smpc.png</file>
-        <file>pictogram.png</file>
-        <file>icon-m-stop.png</file>
-        <file>pictogram.svg</file>
+    <qresource prefix="">
+        <file>images/smpc.svg</file>
+        <file>images/smpc-big.png</file>
+        <file>images/smpc.png</file>
+        <file>images/pictogram.png</file>
+        <file>images/icon-m-stop.png</file>
+        <file>images/pictogram.svg</file>
     </qresource>
 </RCC>
